# tax-amendment-assistant

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml
.claude/: launch.json
core/: amendment_agent.py  amendment_queue.py  article_comparison_format.py  article_relations.py  buchik_precedents.py  citation_graph.py  citation_parser.py  cross_ref_checker.py  draft_bill_parser.py  hwp_reader.py  hwpx_writer.py  law_api.py  law_freshness.py  law_network.py  llm_review.py  new_article_scanner.py  outline_intent.py  parallel_golden.py  parallel_matrix.py  related_article_hints.py  related_article_scanner.py  related_relation_types.py  related_review_queue.py  review_report.py  special_tax_hints.py  special_tax_link_builder.py
data/: buchik_precedents.json  law-snapshot-manifest.json  parallel-adjudication-batch.json  parallel-adjudications.json  parallel-candidates-stage2.json  parallel-crosscheck.json  parallel-law-matrix.json  special-tax-parallel-candidates.json
docs/: architecture.md  citation-parsing.md  corporate-income-tax-parallel-manual.md  parallel-law-detection.md  parallel-llm-review.md  reference-materials.md  special-tax-parallel-links.md
scripts/: adjudicate_parallel_pairs.py  analyze_uploaded_draft.py  build_law_citation_graph.py  build_parallel_candidates.py  build_parallel_matrix.py  build_special_tax_links.py  check_law_freshness.py  crosscheck_llm_matches.py  report_llm_matches.py  run_offline_tests.py  smoke_parallel_hints.py  test_article_comparison_format.py  test_article_relations.py  test_citation_graph.py  (+13 more)
ui/: styles.py  (+5 more)
(+1 files in other folders)
